search functionality on an array
search functionality on an array and
oninput event and include( ) func

--- a/inhertance.html
+++ b/inhertance.html
@@ -10,8 +10,8 @@
  <h1>inheritance</h1> 
  <h2 id="demo1"></h2>  
  <!-- <form class="grocery-form"> -->
- <!-- <input id="demo" type="number"> -->
- <button type="button" onclick="func()">generate</button>
+ <input id="demo"  type="text" oninput="func()">
+ <!-- <button type="button" onclick="func()">generate</button> -->
 <!-- </form> -->
 </body>
 <script src="inheritance.js"></script>
