currying in javascript vip

--- a/inhertance.html
+++ b/inhertance.html
@@ -14,6 +14,6 @@
  <!-- <button type="button" onclick="func()">generate</button> -->
 <!-- </form> -->
 </body>
-<script src="inheritance.js"></script>
+<script src="index.js"></script>
 
 </html>
