showing array,s elements using setinterval

--- a/inhertance.html
+++ b/inhertance.html
@@ -13,6 +13,7 @@
  <input id="demo"  type="text" oninput="func()">
  <!-- <button type="button" onclick="func()">generate</button> -->
 <!-- </form> -->
+<div id="id"></div>
 </body>
 <script src="index.js"></script>
 
