css clamp(),min(),max()

--- a/inhertance.html
+++ b/inhertance.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="inheretence.css">
 </head>
-<body>
- <h1>inheritance</h1> 
- <h2 id="demo1"></h2>  
- <!-- <form class="grocery-form"> -->
- <input id="demo"  type="text" oninput="func()">
- <!-- <button type="button" onclick="func()">generate</button> -->
-<!-- </form> -->
 
-<div id="id"></div>
+<body >
+
+
+    <div class="main_body">
+        <div class="header">
+            <h1>Heading responsive layouts won,t have to be a struggle</h1>
+        </div>
+        <div class="flex">
+            <div class="para">
+                <h2>para1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem numquam, alias odit fuga consectetur suscipit architecto nihil cupiditate veritatis quibusdam error minima voluptatem maiores, facere ducimus dolorem, dolorum culpa! Voluptates!</p>
+            </div>
+            <div class="para">
+                <h2>para1</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem numquam, alias odit fuga consectetur suscipit architecto nihil cupiditate veritatis quibusdam error minima voluptatem maiores, facere ducimus dolorem, dolorum culpa! Voluptates!</p>
+            </div>
+            
+        </div>
+    </div>
+   
+    
+
+
+
+
+ 
+
 </body>
 <script src="index.js"></script>
+
+
+
+
 
 </html>
